# topologicpy_MCP

./: .mcp.json  README.md  claude_code_config.example.json  pyproject.toml  server.py
benchmarks/: OPTIMIZATION_PLAN.md  benchmark_results.json  live_benchmark.py  token_benchmark.py
output/: 27rooms.json  2floor.brep  2floor.json  building.brep  full_model.brep
tests/: build_building.py  test_building_integration.py
