[project]
name = "topologic-mcp-server"
version = "0.1.0"
description = "MCP server exposing TopologicPy spatial modeling to LLM agents"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "topologicpy>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
topologic-mcp = "topologic_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topologic_mcp"]
